# sap-b1-ai-agent

./: .gitignore  CLAUDE.md  README.md  SETUP.md  teklif_7357_database_çıktısı.xlsx
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/agents/: __init__.py  approval.py  base.py  customer_matcher.py  document_reader.py  llm_client.py  logistics_agent.py  notification.py  orchestrator.py  pricing.py  product_matcher.py  sap_writer.py  schemas.py  stock.py
backend/app/api/: deps.py
backend/app/api/middleware/: tenant.py
backend/app/api/routes/: admin.py  analytics.py  auth.py  debug.py  (+5 more)
backend/app/core/: config.py  logging.py  metrics.py  middleware.py  observability.py  rate_limit.py  redis_events.py  security.py  tenant_context.py  vault.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/sap/: __init__.py  client.py  errors.py  idempotency.py  odata.py  session.py
backend/app/schemas/: auth.py  document.py
backend/app/services/: audit.py  documents.py  docx_parser.py  einvoice.py  excel_parser.py  quotation_pdf.py  storage.py
backend/app/workers/: __init__.py  approval_tasks.py  celery_app.py  email_poller.py  graph_poller.py  sync_tasks.py  tasks.py
backend/scripts/: excel_to_pdf.py  onboard_tenant.py  seed.py
backend/tests/: conftest.py
backend/tests/agents/: test_customer_matcher.py  test_document_reader_excel.py  test_llm_client.py  test_pricing.py
backend/tests/api/: conftest.py  test_admin_tenants.py  test_analytics.py  test_auth_flow.py  test_rate_limit.py  test_security.py  test_tenant_middleware.py
backend/tests/load/: locustfile.py
backend/tests/sap/: test_business_partners.py  test_client.py  test_errors.py  test_odata.py  test_sales_orders.py
backend/tests/services/: test_excel_parser.py  test_quotation_pdf.py  test_sap_payload.py  test_storage.py  test_vault.py
(+137 files in other folders)
