[project]
name = "sap-b1-ai-agent-backend"
version = "0.1.0"
description = "SAP B1 AI Agent — FastAPI backend with multi-agent orchestrator"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.30",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "redis>=5.2",
    "celery>=5.4",
    "openai>=1.55",
    "pdfplumber>=0.11",
    "pypdf>=5.1",
    "pdf2image>=1.17",
    "pytesseract>=0.3",
    "pillow>=11.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.12",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.2",
    "rapidfuzz>=3.10",
    "tenacity>=9.0",
    "structlog>=24.4",
    "sentry-sdk>=2.18",
    "opentelemetry-api>=1.28",
    "opentelemetry-sdk>=1.28",
    "opentelemetry-instrumentation-fastapi>=0.49b2",
    "opentelemetry-exporter-otlp-proto-http>=1.28",
    "prometheus-client>=0.21",
    "email-validator>=2.2",
    "imap-tools>=1.7",
    "aiosqlite>=0.20",
    "greenlet>=3.1",
    "hvac>=2.3",
    "boto3>=1.35",
    "openpyxl>=3.1",
    "pandas>=2.2",
    "weasyprint>=63.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "black>=24.10",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.27",
    "respx>=0.21",
    "locust>=2.32",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "B", "UP", "S", "A", "C4", "DTZ", "T20", "SIM", "RUF"]
ignore = ["S101", "RUF001", "RUF002", "RUF003"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
